# aoc2024

./: .gitignore  CMakeLists.txt  LICENCE  README.md  run_all.sh
aoc1/: CMakeLists.txt  aoc1.cpp
aoc10/: CMakeLists.txt  aoc10.cpp
aoc11/: CMakeLists.txt  aoc11.cpp
aoc12/: CMakeLists.txt  aoc12.cpp
aoc13/: CMakeLists.txt  aoc13.cpp
aoc14/: CMakeLists.txt  aoc14.cpp
aoc15/: CMakeLists.txt  aoc15.cpp
aoc16/: CMakeLists.txt  aoc16.cpp
aoc17/: CMakeLists.txt  aoc17.cpp
aoc18/: CMakeLists.txt  aoc18.cpp
aoc19/: CMakeLists.txt  aoc19.cpp
aoc2/: CMakeLists.txt  aoc2.cpp  aoc2_reddit.cpp  aoc2a.cpp  aoc2bb.cpp
aoc20/: CMakeLists.txt  aoc20.cpp  aoc20_1.cpp
aoc21/: CMakeLists.txt  aoc21.cpp  aoc21_0.cpp  aoc21_1.cpp
aoc22/: CMakeLists.txt  aoc22.cpp
aoc23/: CMakeLists.txt  aoc23.cpp
aoc24/: CMakeLists.txt  aoc24.cpp  aoc24_0.cpp  aoc24_1.cpp
aoc25/: CMakeLists.txt  aoc25.cpp
aoc3/: CMakeLists.txt  aoc3.cpp  aoc3mm.cpp
aoc4/: CMakeLists.txt  aoc4.cpp
aoc5/: CMakeLists.txt  aoc5.cpp  aoc5_brute.cpp  aoc5_par.cpp
aoc6/: CMakeLists.txt  aoc6.cpp
aoc7/: CMakeLists.txt  aoc7.cpp  aoc7_reddit.cpp  aoc7r.cpp  aoc7rd.cpp
aoc8/: CMakeLists.txt  aoc8.cpp
aoc9/: CMakeLists.txt  aoc9.cpp
aoc_test/: CMakeLists.txt
aoc_test/aoc20_2018/: CMakeLists.txt  aoc20.cpp
aoc_test/aoc22_2021/: CMakeLists.txt  aoc22.cpp
common/: ctre_inc.h  graph.h  linear_set.h  mm_file.h  timer.h  trie.h
